k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elite-powerplay
  labels:
    app.kubernetes.io/name: elite-powerplay
